--- a/logic/package.json
+++ b/logic/package.json
@@ -13,9 +13,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@sinclair/typebox": "^0.29.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-openapi-validator": "^5.0.4",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
         "swagger-jsdoc": "^6.2.8",
