--- a/logic/package.json
+++ b/logic/package.json
@@ -20,15 +20,16 @@
         "express-openapi-validator": "^5.0.4",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
-        "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.0"
+        "reflect-metadata": "^0.1.13",
+        "sqlite3": "^5.1.6",
+        "swagger-ui-express": "^5.0.0",
+        "typeorm": "^0.3.17"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
         "@types/node": "^20.4.2",
-        "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "concurrently": "^8.2.0",
         "nodemon": "^3.0.1",
