--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@sinclair/typebox": "^0.29.6",
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "express-openapi-validator": "^5.0.4",
+        "express-validator": "^7.0.1",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
         "reflect-metadata": "^0.1.13",
