--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
         "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.6",
@@ -25,8 +28,11 @@
         "typeorm": "^0.3.17"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cookie-parser": "^1.4.4",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.3",
         "@types/morgan": "^1.9.4",
         "@types/node": "^20.4.2",
         "@types/swagger-ui-express": "^4.1.3",
