--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,9 @@
 {
-    "tabWidth": 4
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "arrowParens": "always"
 }
