--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "scripts": {
         "build": "npx tsc",
         "start": "node dist/index.js",
-        "dev": "npx tsc && concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+        "dev": "npx tsc && concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+        "prepare": "npx husky install"
+    },
+    "lint-staged": {
+        "src/**/*.{ts,tsx}": [
+            "prettier"
+        ]
     },
     "keywords": [],
     "author": "",
@@ -31,6 +37,7 @@
         "@types/node": "^20.4.2",
         "@types/swagger-ui-express": "^4.1.3",
         "concurrently": "^8.2.0",
+        "husky": "^8.0.3",
         "nodemon": "^3.0.1",
         "prettier": "3.0.0",
         "typescript": "^5.1.6"
