--- a/package.json
+++ b/package.json
@@ -1,45 +1,43 @@
 {
-    "name": "docinfo-backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "src/index.ts",
-    "scripts": {
-        "build": "npx tsc",
-        "start": "node dist/index.js",
-        "dev": "npx tsc && concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-        "prepare": "npx husky install"
-    },
-    "lint-staged": {
-        "src/**/*.{ts,tsx}": [
-            "prettier"
-        ]
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@sinclair/typebox": "^0.29.6",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "express-openapi-validator": "^5.0.4",
-        "helmet": "^7.0.0",
-        "morgan": "^1.10.0",
-        "reflect-metadata": "^0.1.13",
-        "sqlite3": "^5.1.6",
-        "swagger-ui-express": "^5.0.0",
-        "typeorm": "^0.3.17"
-    },
-    "devDependencies": {
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "@types/morgan": "^1.9.4",
-        "@types/node": "^20.4.2",
-        "@types/swagger-ui-express": "^4.1.3",
-        "concurrently": "^8.2.0",
-        "husky": "^8.0.3",
-        "nodemon": "^3.0.1",
-        "prettier": "3.0.0",
-        "typescript": "^5.1.6"
-    }
+  "name": "docinfo-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.ts",
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "npx tsc && concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "prepare": "npx husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@sinclair/typebox": "^0.29.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-openapi-validator": "^5.0.4",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.6",
+    "swagger-ui-express": "^5.0.0",
+    "typeorm": "^0.3.17"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.4.2",
+    "@types/swagger-ui-express": "^4.1.3",
+    "concurrently": "^8.2.0",
+    "husky": "^8.0.3",
+    "nodemon": "^3.0.1",
+    "prettier": "3.0.0",
+    "typescript": "^5.1.6"
+  }
 }
