--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^8.2.0",
     "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "nodemon": "^3.0.1",
     "prettier": "3.0.0",
     "typescript": "^5.1.6"
