--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,43 @@
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# compiled output
+/dist
+/node_modules
+
+# others
 .vercel
-.env
-
-node_modules
-dist
-
 db.sqlite
-.vscode
-.idea
 
-prisma/docker/postgres/.env
-docker/postgres/.env
+# private environments
+.env
+database/docker/.env
