--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,22 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "target": "es2016",
+    "baseUrl": "./",
+    "target": "ES2021",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "forceConsistentCasingInFileNames": false,
     "strict": true,
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false
-  },
-  "include": ["./*.js", "src/**/*.ts"]
+    "incremental": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false,
+    "declaration": true,
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true
+  }
 }
