--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -34,6 +34,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.3.1",
     "class-transformer": "^0.5.1",
@@ -56,6 +57,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
