add env variables

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,15 @@ VERCEL_JWT_EXPIRED=1d
 VERCEL_JWT_SECRET=""
 
 VERCEL_REMOTE_ORIGIN=""
+VERCEL_REMOTE_ORIGIN_1=""
+VERCEL_REMOTE_ORIGIN_2=""
+
 VERCEL_LOCAL_ORIGIN=""
+VERCEL_LOCAL_ORIGIN_1=""
+VERCEL_LOCAL_ORIGIN_2=""
+
+VERCEL_REMOTE_SERVER_ADDRESS=""
+VERCEL_LOCAL_SERVER_ADDRESS=""
 
 #Database settings
 VERCEL_DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
